# elasticvue

./: .babelrc  .browserslistrc  .dockerignore  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  .stylelintrc.js  .tool-versions  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile_multiarch  EXPORT_IMPORT_FEATURES.md  EXPORT_IMPORT_FLOW.md  LAW  LICENSE  Makefile  PRIVACY.md  README.md  TAURI.md  babel.config.js  build_chrome_extension.sh  compose.yml  cypress.json  docker-compose.elastic.yml  docker-compose.yml  eslint.config.mjs  index.html  jest.config.js  logo.xcf  package-lock.json  package.json  playwright.config.ts  prod-server.js  release.sh  test_all.sh  test_e2e.sh  (+5 more)
.continue/rules/: new-rule.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  build_desktop.yml  build_docker.yml  changelog.yml  corepack.yml  playwright.yml  release.yml  test.yml  test_build.yml  ubuntu_test.yml  workflow.yml
browser_extension/: manifest.json
browser_extension/chrome/: background.js  manifest.json
browser_extension/edge/: manifest.json
browser_extension/firefox/: background.js  manifest.json
chrome_extension/: background.js  manifest.json
config/: index.js
docker/: Dockerfile  Dockerfile_browser_ext  Dockerfile_ci  Dockerfile_ci_new  Dockerfile_dev  Dockerfile_multiarch  Dockerfile_nginx  Dockerfile_tauri
docker/nginx/: 99_default_clusters.sh  elasticvue.conf
docs/: README_CN.md  README_RU.md
nginx/: 100-replace-enviroment.sh  elasticvue.conf
old/: .dockerignore  .eslintignore  CHANGELOG.md  Dockerfile  babel.config.js  cypress.json  package.json  vue.config.js
old/scripts/: build_browser_extensions.sh  release.sh  test_e2e.sh
old/src/: data.json  i18n.js  main.js  (+2 more)
old/src-tauri/: Cargo.toml
old/src-tauri/src/: load_file.rs
public/: index.html
scripts/: build_browser_extensions.sh  build_chrome_extension.sh  chrome_ext_screenshots.js  chrome_ext_screenshots2.js  express-server.js  mock.js  release.sh  test_all.sh  test_e2e.sh  translation-diff.js  website_screenshots.js
src/: App.vue  autocomplete.js  autocomplete.ts  background.js  buildConfig.ts  config.ts  consts.js  consts.ts  data.json  global.js  globals.js  i18n.js  main.js  main.ts  router.js  router.ts  style.css  vuetify.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: directory_list.rs  lib.rs  main.rs  menu.rs  save_file.rs  user_dirs.rs
tests/: helpers.ts  vitest.setup.ts
tools/: make_screenshots.js  website_screenshots.js
(+834 files in other folders)
