[package]
name = "elasticvue"
version = "0.1.0"
description = "Elasticsearch frontend"
authors = ["Carsten König"]
license = "MIT"
repository = "https://github.com/cars10/elasticvue"
default-run = "elasticvue"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1", features = ["api-all"] }
fetch_reqwest = { git = "https://github.com/cars10/fetch_reqwest" }
path-clean = "0.1.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
